// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach.jsx 1`] = `
<DocumentFragment>
  <div
    class="anchor-demo-attach"
    id="attach"
    style="display: flex;"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor_line"
      >
        <div
          class="point"
          style="top: 0px; height: 0px;"
        />
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#content-1"
          title="content-1"
        >
          content-1
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#content-2"
          title="content-2"
        >
          content-2
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#content-3"
          title="content-3"
        >
          content-3
        </a>
      </div>
      <div
        class="t-anchor-item t-is-active"
      >
        <a
          class="t-anchor-item_link"
          href="#content-4"
          title="content-4"
        >
          content-4
        </a>
      </div>
    </div>
    <div
      id="anchor-container"
      style="width: 100%; height: 200px; overflow: auto; text-align: center; font-size: 22px;"
    >
      <div
        id="content-1"
        style="background: rgb(223, 239, 255); line-height: 100px;"
      >
        content-1
      </div>
      <div
        id="content-2"
        style="background: rgb(191, 219, 247); line-height: 100px;"
      >
        content-2
      </div>
      <div
        id="content-3"
        style="background: rgb(155, 197, 242); line-height: 100px;"
      >
        content-3
      </div>
      <div
        id="content-4"
        style="background: rgb(123, 175, 237); line-height: 100px;"
      >
        content-4
      </div>
      <div
        id="content-5"
        style="background: rgb(92, 153, 235); line-height: 100px;"
      >
        content-5
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    id="default"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor_line"
      >
        <div
          class="point"
          style="top: 0px; height: 0px;"
        />
      </div>
      <div
        class="t-anchor-item t-is-active"
      >
        <a
          class="t-anchor-item_link"
          href="#default"
          title="基础锚点"
        >
          基础锚点
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#multiple"
          title="多级锚点"
        >
          多级锚点
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#size"
          title="尺寸大小"
        >
          尺寸大小
        </a>
        <div
          class="t-anchor-item"
        >
          <a
            class="t-anchor-item_link"
            href="#size"
            title="size-medium"
          >
            size-medium
          </a>
        </div>
        <div
          class="t-anchor-item"
        >
          <a
            class="t-anchor-item_link"
            href="#size-large"
            title="size-large"
          >
            size-large
          </a>
        </div>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#attach"
          title="指定容器"
        >
          指定容器
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`multiple.jsx 1`] = `
<DocumentFragment>
  <div
    id="multiple"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor_line"
      >
        <div
          class="point"
          style="top: 0px; height: 0px;"
        />
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#default"
          title="基础锚点"
        >
          基础锚点
        </a>
      </div>
      <div
        class="t-anchor-item t-is-active"
      >
        <a
          class="t-anchor-item_link"
          href="#multiple"
          title="多级锚点"
        >
          多级锚点
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#size"
          title="尺寸大小"
        >
          尺寸大小
        </a>
        <div
          class="t-anchor-item"
        >
          <a
            class="t-anchor-item_link"
            href="#size"
            title="size-medium"
          >
            size-medium
          </a>
        </div>
        <div
          class="t-anchor-item"
        >
          <a
            class="t-anchor-item_link"
            href="#size-large"
            title="size-large"
          >
            size-large
          </a>
        </div>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#attach"
          title="指定容器"
        >
          指定容器
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    id="size"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor_line"
      >
        <div
          class="point"
          style="top: 0px; height: 0px;"
        />
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#default"
          title="基础锚点"
        >
          基础锚点
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#multiple"
          title="多级锚点"
        >
          多级锚点
        </a>
      </div>
      <div
        class="t-anchor-item t-is-active"
      >
        <a
          class="t-anchor-item_link"
          href="#size"
          title="尺寸大小"
        >
          尺寸大小
        </a>
        <div
          class="t-anchor-item t-is-active"
        >
          <a
            class="t-anchor-item_link"
            href="#size"
            title="size-medium"
          >
            size-medium
          </a>
        </div>
        <div
          class="t-anchor-item"
        >
          <a
            class="t-anchor-item_link"
            href="#size-large"
            title="size-large"
          >
            size-large
          </a>
        </div>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#attach"
          title="指定容器"
        >
          指定容器
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`sizeLarge.jsx 1`] = `
<DocumentFragment>
  <div
    id="size-large"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor_line"
      >
        <div
          class="point"
          style="top: 0px; height: 0px;"
        />
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#default"
          title="基础锚点"
        >
          基础锚点
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#multiple"
          title="多级锚点"
        >
          多级锚点
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#size"
          title="尺寸大小"
        >
          尺寸大小
        </a>
        <div
          class="t-anchor-item"
        >
          <a
            class="t-anchor-item_link"
            href="#size"
            title="size-medium"
          >
            size-medium
          </a>
        </div>
        <div
          class="t-anchor-item t-is-active"
        >
          <a
            class="t-anchor-item_link"
            href="#size-large"
            title="size-large"
          >
            size-large
          </a>
        </div>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#attach"
          title="指定容器"
        >
          指定容器
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`target.jsx 1`] = `
<DocumentFragment>
  <div
    class="anchor-demo"
    id="/components/anchor/#anchor-target"
  >
    <h1
      class="t-anchor-target"
      id="/components/anchor/#default"
    >
      基础锚点
      <svg
        class="t-icon t-icon-file-copy t-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
    </h1>
    <h1
      class="t-anchor-target"
      id="/components/anchor/#multiple"
    >
      多级锚点
      <svg
        class="t-icon t-icon-file-copy t-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
    </h1>
    <h1
      class="t-anchor-target"
      id="/components/anchor/#size"
    >
      尺寸大小
      <svg
        class="t-icon t-icon-file-copy t-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
    </h1>
    <h1
      class="t-anchor-target"
      id="/components/anchor/#attach"
    >
      指定容器
      <svg
        class="t-icon t-icon-file-copy t-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
    </h1>
  </div>
</DocumentFragment>
`;
